src/Compilador/ModuloSintactico/y.output
   0  $accept : programa $end

   1  programa : nombre_programa '{' list_sentencia '}'
   2           | nombre_programa '{' list_sentencia '}' '}'
   3           | nombre_programa list_sentencia '}'
   4           | nombre_programa '{' list_sentencia
   5           | nombre_programa list_sentencia
   6           | '{' list_sentencia '}'

   7  nombre_programa : ID

   8  declaracion_funcion : header_funcion '(' parametros_formales ')' '{' list_sentencia '}'

   9  header_funcion : tipo ID
  10                 | tipo

  11  list_sentencia :
  12                 | list_sentencia sentencia

  13  sentencia : sentencia_declarativa punto_y_coma
  14            | sentencia_ejecutable punto_y_coma
  15            | declaracion_funcion
  16            | declaracion_funcion ';'
  17            | error ';'

  18  punto_y_coma : ';'
  19               | error ';'

  20  punto_y_coma_cuerpo : ';'
  21                      | error '}'

  22  sentencia_declarativa : tipo list_vars

  23  parametros_formales : parametro_formal
  24                      | parametros_formales ',' parametro_formal
  25                      |

  26  parametro_formal : semantica tipo ID
  27                   | semantica ID
  28                   | semantica tipo

  29  semantica : CR
  30            |

  31  sentencia_return : RETURN '(' expresion ')'

  32  tipo : ULONG

  33  list_ctes : CTE
  34            | list_ctes ',' CTE
  35            | list_ctes CTE

  36  list_vars_mix : identificador
  37                | list_vars_mix ',' identificador
  38                | list_vars_mix identificador

  39  list_vars : ID
  40            | list_vars ',' ID
  41            | list_vars ID

  42  cuerpo_ejecutable : bloque_ejecutable
  43                    | sentencia_ejecutable_simple

  44  sentencia_ejecutable_simple : asignacion_simple
  45                              | asignacion_multiple
  46                              | sentencia_return
  47                              | sentencia_print

  48  sentencia_ejecutable : sentencia_if
  49                       | asignacion_simple
  50                       | asignacion_multiple
  51                       | sentencia_return
  52                       | expresion_lambda
  53                       | sentencia_while
  54                       | sentencia_print

  55  bloque_ejecutable : '{' lista_sentencias_ejecutable '}'
  56                    | '{' '}'
  57                    | '{' error '}'

  58  lista_sentencias_ejecutable : lista_sentencias_ejecutable sentencia_ejecutable punto_y_coma_cuerpo
  59                              | sentencia_ejecutable punto_y_coma_cuerpo

  60  sentencia_if : if condicion_if cuerpo_ejecutable else cuerpo_ejecutable end_if
  61               | if condicion_if cuerpo_ejecutable end_if

  62  sentencia_print : PRINT '(' CADENA ')'
  63                  | PRINT '(' expresion ')'
  64                  | PRINT '(' ')'

  65  sentencia_while : while condicion_while do cuerpo_ejecutable

  66  do : DO
  67     |

  68  else : ELSE

  69  if : IF

  70  while : WHILE

  71  end_if : ENDIF
  72         |

  73  condicion_if : '(' condicion ')'
  74               | condicion ')'
  75               | '(' condicion
  76               | condicion

  77  condicion_while : '(' condicion ')'
  78                  | condicion ')'
  79                  | '(' condicion
  80                  | condicion

  81  parametros_reales : parametro_real
  82                    | parametros_reales ',' parametro_real
  83                    | error

  84  parametro_real : expresion FLECHA ID
  85                 | expresion FLECHA
  86                 | expresion ID

  87  condicion : expresion comp expresion
  88            | expresion factor_simple

  89  comp : EQ
  90       | GEQ
  91       | LEQ
  92       | NEQ
  93       | '>'
  94       | '<'
  95       | '='
  96       | '=' '<'
  97       | '=' '>'
  98       | '!' '='

  99  asignacion_simple : var_asignacion_simple ASIG expresion

 100  var_asignacion_simple : identificador

 101  asignacion_multiple : list_vars_mix '=' list_ctes

 102  header_lambda : '(' tipo ID ')'

 103  $$1 :

 104  expresion_lambda : header_lambda bloque_ejecutable $$1 '(' factor_lambda ')'

 105  factor_lambda : identificador
 106                | CTE
 107                | '-' CTE

 108  expresion : expresion operador_expresion termino
 109            | termino
 110            | error operador_expresion termino
 111            | expresion operador_expresion error
 112            | error operador_expresion error
 113            | error ';'

 114  termino : termino operador_termino factor
 115          | factor
 116          | error operador_termino factor
 117          | termino operador_termino error
 118          | error operador_termino error

 119  operador_expresion : '+'
 120                     | '-'

 121  operador_termino : '*'
 122                   | '/'

 123  factor : identificador
 124         | CTE
 125         | inicio_llamado parametros_reales ')'
 126         | '-' CTE
 127         | trunc

 128  factor_simple : identificador
 129                | CTE
 130                | inicio_llamado parametros_reales ')'
 131                | trunc

 132  trunc : TRUNC '(' CTE ')'
 133        | TRUNC '(' CTE error
 134        | TRUNC error CTE ')'
 135        | TRUNC error CTE error
 136        | TRUNC '(' '-' CTE ')'

 137  inicio_llamado : identificador '('

 138  identificador : ID
 139                | ID '.' ID

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	'{'  shift 2
	.  error

	programa  goto 3
	nombre_programa  goto 4


state 1
	nombre_programa : ID .  (7)

	.  reduce 7


state 2
	programa : '{' . list_sentencia '}'  (6)
	list_sentencia : .  (11)

	.  reduce 11

	list_sentencia  goto 5


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : nombre_programa . '{' list_sentencia '}'  (1)
	programa : nombre_programa . '{' list_sentencia '}' '}'  (2)
	programa : nombre_programa . list_sentencia '}'  (3)
	programa : nombre_programa . '{' list_sentencia  (4)
	programa : nombre_programa . list_sentencia  (5)
	list_sentencia : .  (11)

	'{'  shift 6
	$end  reduce 11
	error  reduce 11
	WHILE  reduce 11
	IF  reduce 11
	PRINT  reduce 11
	RETURN  reduce 11
	ID  reduce 11
	ULONG  reduce 11
	'}'  reduce 11
	'('  reduce 11

	list_sentencia  goto 7


state 5
	programa : '{' list_sentencia . '}'  (6)
	list_sentencia : list_sentencia . sentencia  (12)

	error  shift 8
	WHILE  shift 9
	IF  shift 10
	PRINT  shift 11
	RETURN  shift 12
	ID  shift 13
	ULONG  shift 14
	'}'  shift 15
	'('  shift 16
	.  error

	declaracion_funcion  goto 17
	header_funcion  goto 18
	tipo  goto 19
	sentencia  goto 20
	sentencia_declarativa  goto 21
	sentencia_ejecutable  goto 22
	sentencia_return  goto 23
	list_vars_mix  goto 24
	identificador  goto 25
	asignacion_simple  goto 26
	asignacion_multiple  goto 27
	sentencia_print  goto 28
	sentencia_if  goto 29
	expresion_lambda  goto 30
	sentencia_while  goto 31
	if  goto 32
	while  goto 33
	var_asignacion_simple  goto 34
	header_lambda  goto 35


state 6
	programa : nombre_programa '{' . list_sentencia '}'  (1)
	programa : nombre_programa '{' . list_sentencia '}' '}'  (2)
	programa : nombre_programa '{' . list_sentencia  (4)
	list_sentencia : .  (11)

	.  reduce 11

	list_sentencia  goto 36


state 7
	programa : nombre_programa list_sentencia . '}'  (3)
	programa : nombre_programa list_sentencia .  (5)
	list_sentencia : list_sentencia . sentencia  (12)

	error  shift 8
	WHILE  shift 9
	IF  shift 10
	PRINT  shift 11
	RETURN  shift 12
	ID  shift 13
	ULONG  shift 14
	'}'  shift 37
	'('  shift 16
	$end  reduce 5

	declaracion_funcion  goto 17
	header_funcion  goto 18
	tipo  goto 19
	sentencia  goto 20
	sentencia_declarativa  goto 21
	sentencia_ejecutable  goto 22
	sentencia_return  goto 23
	list_vars_mix  goto 24
	identificador  goto 25
	asignacion_simple  goto 26
	asignacion_multiple  goto 27
	sentencia_print  goto 28
	sentencia_if  goto 29
	expresion_lambda  goto 30
	sentencia_while  goto 31
	if  goto 32
	while  goto 33
	var_asignacion_simple  goto 34
	header_lambda  goto 35


state 8
	sentencia : error . ';'  (17)

	';'  shift 38
	.  error


state 9
	while : WHILE .  (70)

	.  reduce 70


state 10
	if : IF .  (69)

	.  reduce 69


state 11
	sentencia_print : PRINT . '(' CADENA ')'  (62)
	sentencia_print : PRINT . '(' expresion ')'  (63)
	sentencia_print : PRINT . '(' ')'  (64)

	'('  shift 39
	.  error


state 12
	sentencia_return : RETURN . '(' expresion ')'  (31)

	'('  shift 40
	.  error


state 13
	identificador : ID .  (138)
	identificador : ID . '.' ID  (139)

	'.'  shift 41
	error  reduce 138
	'+'  reduce 138
	'-'  reduce 138
	'*'  reduce 138
	'/'  reduce 138
	ELSE  reduce 138
	ENDIF  reduce 138
	PRINT  reduce 138
	RETURN  reduce 138
	DO  reduce 138
	CTE  reduce 138
	ID  reduce 138
	ASIG  reduce 138
	TRUNC  reduce 138
	FLECHA  reduce 138
	EQ  reduce 138
	GEQ  reduce 138
	LEQ  reduce 138
	NEQ  reduce 138
	'{'  reduce 138
	'('  reduce 138
	')'  reduce 138
	';'  reduce 138
	','  reduce 138
	'>'  reduce 138
	'<'  reduce 138
	'='  reduce 138
	'!'  reduce 138


state 14
	tipo : ULONG .  (32)

	.  reduce 32


state 15
	programa : '{' list_sentencia '}' .  (6)

	.  reduce 6


state 16
	header_lambda : '(' . tipo ID ')'  (102)

	ULONG  shift 14
	.  error

	tipo  goto 42


state 17
	sentencia : declaracion_funcion .  (15)
	sentencia : declaracion_funcion . ';'  (16)

	';'  shift 43
	$end  reduce 15
	error  reduce 15
	WHILE  reduce 15
	IF  reduce 15
	PRINT  reduce 15
	RETURN  reduce 15
	ID  reduce 15
	ULONG  reduce 15
	'}'  reduce 15
	'('  reduce 15


state 18
	declaracion_funcion : header_funcion . '(' parametros_formales ')' '{' list_sentencia '}'  (8)

	'('  shift 44
	.  error


state 19
	header_funcion : tipo . ID  (9)
	header_funcion : tipo .  (10)
	sentencia_declarativa : tipo . list_vars  (22)

	ID  shift 45
	'('  reduce 10

	list_vars  goto 46


state 20
	list_sentencia : list_sentencia sentencia .  (12)

	.  reduce 12


state 21
	sentencia : sentencia_declarativa . punto_y_coma  (13)

	error  shift 47
	';'  shift 48
	.  error

	punto_y_coma  goto 49


state 22
	sentencia : sentencia_ejecutable . punto_y_coma  (14)

	error  shift 47
	';'  shift 48
	.  error

	punto_y_coma  goto 50


state 23
	sentencia_ejecutable : sentencia_return .  (51)

	.  reduce 51


state 24
	list_vars_mix : list_vars_mix . ',' identificador  (37)
	list_vars_mix : list_vars_mix . identificador  (38)
	asignacion_multiple : list_vars_mix . '=' list_ctes  (101)

	ID  shift 13
	','  shift 51
	'='  shift 52
	.  error

	identificador  goto 53


state 25
	list_vars_mix : identificador .  (36)
	var_asignacion_simple : identificador .  (100)

	ID  reduce 36
	ASIG  reduce 100
	','  reduce 36
	'='  reduce 36


state 26
	sentencia_ejecutable : asignacion_simple .  (49)

	.  reduce 49


state 27
	sentencia_ejecutable : asignacion_multiple .  (50)

	.  reduce 50


state 28
	sentencia_ejecutable : sentencia_print .  (54)

	.  reduce 54


state 29
	sentencia_ejecutable : sentencia_if .  (48)

	.  reduce 48


state 30
	sentencia_ejecutable : expresion_lambda .  (52)

	.  reduce 52


state 31
	sentencia_ejecutable : sentencia_while .  (53)

	.  reduce 53


state 32
	sentencia_if : if . condicion_if cuerpo_ejecutable else cuerpo_ejecutable end_if  (60)
	sentencia_if : if . condicion_if cuerpo_ejecutable end_if  (61)

	error  shift 54
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	'('  shift 58
	.  error

	expresion  goto 59
	identificador  goto 60
	condicion_if  goto 61
	condicion  goto 62
	termino  goto 63
	factor  goto 64
	inicio_llamado  goto 65
	trunc  goto 66


state 33
	sentencia_while : while . condicion_while do cuerpo_ejecutable  (65)

	error  shift 54
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	'('  shift 67
	.  error

	expresion  goto 59
	identificador  goto 60
	condicion_while  goto 68
	condicion  goto 69
	termino  goto 63
	factor  goto 64
	inicio_llamado  goto 65
	trunc  goto 66


state 34
	asignacion_simple : var_asignacion_simple . ASIG expresion  (99)

	ASIG  shift 70
	.  error


state 35
	expresion_lambda : header_lambda . bloque_ejecutable $$1 '(' factor_lambda ')'  (104)

	'{'  shift 71
	.  error

	bloque_ejecutable  goto 72


state 36
	programa : nombre_programa '{' list_sentencia . '}'  (1)
	programa : nombre_programa '{' list_sentencia . '}' '}'  (2)
	programa : nombre_programa '{' list_sentencia .  (4)
	list_sentencia : list_sentencia . sentencia  (12)

	error  shift 8
	WHILE  shift 9
	IF  shift 10
	PRINT  shift 11
	RETURN  shift 12
	ID  shift 13
	ULONG  shift 14
	'}'  shift 73
	'('  shift 16
	$end  reduce 4

	declaracion_funcion  goto 17
	header_funcion  goto 18
	tipo  goto 19
	sentencia  goto 20
	sentencia_declarativa  goto 21
	sentencia_ejecutable  goto 22
	sentencia_return  goto 23
	list_vars_mix  goto 24
	identificador  goto 25
	asignacion_simple  goto 26
	asignacion_multiple  goto 27
	sentencia_print  goto 28
	sentencia_if  goto 29
	expresion_lambda  goto 30
	sentencia_while  goto 31
	if  goto 32
	while  goto 33
	var_asignacion_simple  goto 34
	header_lambda  goto 35


state 37
	programa : nombre_programa list_sentencia '}' .  (3)

	.  reduce 3


state 38
	sentencia : error ';' .  (17)

	.  reduce 17


state 39
	sentencia_print : PRINT '(' . CADENA ')'  (62)
	sentencia_print : PRINT '(' . expresion ')'  (63)
	sentencia_print : PRINT '(' . ')'  (64)

	error  shift 54
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	CADENA  shift 74
	')'  shift 75
	.  error

	expresion  goto 76
	identificador  goto 60
	termino  goto 63
	factor  goto 64
	inicio_llamado  goto 65
	trunc  goto 66


state 40
	sentencia_return : RETURN '(' . expresion ')'  (31)

	error  shift 54
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	.  error

	expresion  goto 77
	identificador  goto 60
	termino  goto 63
	factor  goto 64
	inicio_llamado  goto 65
	trunc  goto 66


state 41
	identificador : ID '.' . ID  (139)

	ID  shift 78
	.  error


state 42
	header_lambda : '(' tipo . ID ')'  (102)

	ID  shift 79
	.  error


state 43
	sentencia : declaracion_funcion ';' .  (16)

	.  reduce 16


state 44
	declaracion_funcion : header_funcion '(' . parametros_formales ')' '{' list_sentencia '}'  (8)
	parametros_formales : .  (25)
	semantica : .  (30)

	CR  shift 80
	ID  reduce 30
	ULONG  reduce 30
	')'  reduce 25
	','  reduce 25

	parametros_formales  goto 81
	parametro_formal  goto 82
	semantica  goto 83


state 45
	header_funcion : tipo ID .  (9)
	list_vars : ID .  (39)

	error  reduce 39
	ID  reduce 39
	'('  reduce 9
	';'  reduce 39
	','  reduce 39


state 46
	sentencia_declarativa : tipo list_vars .  (22)
	list_vars : list_vars . ',' ID  (40)
	list_vars : list_vars . ID  (41)

	ID  shift 84
	','  shift 85
	error  reduce 22
	';'  reduce 22


state 47
	punto_y_coma : error . ';'  (19)

	';'  shift 86
	.  error


state 48
	punto_y_coma : ';' .  (18)

	.  reduce 18


state 49
	sentencia : sentencia_declarativa punto_y_coma .  (13)

	.  reduce 13


state 50
	sentencia : sentencia_ejecutable punto_y_coma .  (14)

	.  reduce 14


state 51
	list_vars_mix : list_vars_mix ',' . identificador  (37)

	ID  shift 13
	.  error

	identificador  goto 87


state 52
	asignacion_multiple : list_vars_mix '=' . list_ctes  (101)

	CTE  shift 88
	.  error

	list_ctes  goto 89


state 53
	list_vars_mix : list_vars_mix identificador .  (38)

	.  reduce 38


state 54
	expresion : error . operador_expresion termino  (110)
	expresion : error . operador_expresion error  (112)
	expresion : error . ';'  (113)
	termino : error . operador_termino factor  (116)
	termino : error . operador_termino error  (118)

	'+'  shift 90
	'-'  shift 91
	'*'  shift 92
	'/'  shift 93
	';'  shift 94
	.  error

	operador_expresion  goto 95
	operador_termino  goto 96


state 55
	factor : '-' . CTE  (126)

	CTE  shift 97
	.  error


state 56
	factor : CTE .  (124)

	.  reduce 124


state 57
	trunc : TRUNC . '(' CTE ')'  (132)
	trunc : TRUNC . '(' CTE error  (133)
	trunc : TRUNC . error CTE ')'  (134)
	trunc : TRUNC . error CTE error  (135)
	trunc : TRUNC . '(' '-' CTE ')'  (136)

	error  shift 98
	'('  shift 99
	.  error


state 58
	condicion_if : '(' . condicion ')'  (73)
	condicion_if : '(' . condicion  (75)

	error  shift 54
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	.  error

	expresion  goto 59
	identificador  goto 60
	condicion  goto 100
	termino  goto 63
	factor  goto 64
	inicio_llamado  goto 65
	trunc  goto 66


state 59
	condicion : expresion . comp expresion  (87)
	condicion : expresion . factor_simple  (88)
	expresion : expresion . operador_expresion termino  (108)
	expresion : expresion . operador_expresion error  (111)

	'+'  shift 90
	'-'  shift 91
	CTE  shift 101
	ID  shift 13
	TRUNC  shift 57
	EQ  shift 102
	GEQ  shift 103
	LEQ  shift 104
	NEQ  shift 105
	'>'  shift 106
	'<'  shift 107
	'='  shift 108
	'!'  shift 109
	.  error

	identificador  goto 110
	comp  goto 111
	factor_simple  goto 112
	operador_expresion  goto 113
	inicio_llamado  goto 114
	trunc  goto 115


state 60
	factor : identificador .  (123)
	inicio_llamado : identificador . '('  (137)

	'('  shift 116
	error  reduce 123
	'+'  reduce 123
	'-'  reduce 123
	'*'  reduce 123
	'/'  reduce 123
	ELSE  reduce 123
	ENDIF  reduce 123
	PRINT  reduce 123
	RETURN  reduce 123
	DO  reduce 123
	CTE  reduce 123
	ID  reduce 123
	TRUNC  reduce 123
	FLECHA  reduce 123
	EQ  reduce 123
	GEQ  reduce 123
	LEQ  reduce 123
	NEQ  reduce 123
	'{'  reduce 123
	')'  reduce 123
	';'  reduce 123
	'>'  reduce 123
	'<'  reduce 123
	'='  reduce 123
	'!'  reduce 123


state 61
	sentencia_if : if condicion_if . cuerpo_ejecutable else cuerpo_ejecutable end_if  (60)
	sentencia_if : if condicion_if . cuerpo_ejecutable end_if  (61)

	PRINT  shift 11
	RETURN  shift 12
	ID  shift 13
	'{'  shift 71
	.  error

	sentencia_return  goto 117
	list_vars_mix  goto 24
	identificador  goto 25
	cuerpo_ejecutable  goto 118
	bloque_ejecutable  goto 119
	sentencia_ejecutable_simple  goto 120
	asignacion_simple  goto 121
	asignacion_multiple  goto 122
	sentencia_print  goto 123
	var_asignacion_simple  goto 34


state 62
	condicion_if : condicion . ')'  (74)
	condicion_if : condicion .  (76)

	')'  shift 124
	PRINT  reduce 76
	RETURN  reduce 76
	ID  reduce 76
	'{'  reduce 76


state 63
	expresion : termino .  (109)
	termino : termino . operador_termino factor  (114)
	termino : termino . operador_termino error  (117)

	'*'  shift 92
	'/'  shift 93
	error  reduce 109
	'+'  reduce 109
	'-'  reduce 109
	ELSE  reduce 109
	ENDIF  reduce 109
	PRINT  reduce 109
	RETURN  reduce 109
	DO  reduce 109
	CTE  reduce 109
	ID  reduce 109
	TRUNC  reduce 109
	FLECHA  reduce 109
	EQ  reduce 109
	GEQ  reduce 109
	LEQ  reduce 109
	NEQ  reduce 109
	'{'  reduce 109
	')'  reduce 109
	';'  reduce 109
	'>'  reduce 109
	'<'  reduce 109
	'='  reduce 109
	'!'  reduce 109

	operador_termino  goto 125


state 64
	termino : factor .  (115)

	.  reduce 115


state 65
	factor : inicio_llamado . parametros_reales ')'  (125)

	error  shift 126
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	.  error

	expresion  goto 127
	identificador  goto 60
	parametros_reales  goto 128
	parametro_real  goto 129
	termino  goto 63
	factor  goto 64
	inicio_llamado  goto 65
	trunc  goto 66


state 66
	factor : trunc .  (127)

	.  reduce 127


state 67
	condicion_while : '(' . condicion ')'  (77)
	condicion_while : '(' . condicion  (79)

	error  shift 54
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	.  error

	expresion  goto 59
	identificador  goto 60
	condicion  goto 130
	termino  goto 63
	factor  goto 64
	inicio_llamado  goto 65
	trunc  goto 66


state 68
	sentencia_while : while condicion_while . do cuerpo_ejecutable  (65)
	do : .  (67)

	DO  shift 131
	PRINT  reduce 67
	RETURN  reduce 67
	ID  reduce 67
	'{'  reduce 67

	do  goto 132


state 69
	condicion_while : condicion . ')'  (78)
	condicion_while : condicion .  (80)

	')'  shift 133
	PRINT  reduce 80
	RETURN  reduce 80
	DO  reduce 80
	ID  reduce 80
	'{'  reduce 80


state 70
	asignacion_simple : var_asignacion_simple ASIG . expresion  (99)

	error  shift 54
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	.  error

	expresion  goto 134
	identificador  goto 60
	termino  goto 63
	factor  goto 64
	inicio_llamado  goto 65
	trunc  goto 66


state 71
	bloque_ejecutable : '{' . lista_sentencias_ejecutable '}'  (55)
	bloque_ejecutable : '{' . '}'  (56)
	bloque_ejecutable : '{' . error '}'  (57)

	error  shift 135
	WHILE  shift 9
	IF  shift 10
	PRINT  shift 11
	RETURN  shift 12
	ID  shift 13
	'}'  shift 136
	'('  shift 16
	.  error

	sentencia_ejecutable  goto 137
	sentencia_return  goto 23
	list_vars_mix  goto 24
	identificador  goto 25
	asignacion_simple  goto 26
	asignacion_multiple  goto 27
	sentencia_print  goto 28
	sentencia_if  goto 29
	expresion_lambda  goto 30
	sentencia_while  goto 31
	lista_sentencias_ejecutable  goto 138
	if  goto 32
	while  goto 33
	var_asignacion_simple  goto 34
	header_lambda  goto 35


state 72
	expresion_lambda : header_lambda bloque_ejecutable . $$1 '(' factor_lambda ')'  (104)
	$$1 : .  (103)

	.  reduce 103

	$$1  goto 139


state 73
	programa : nombre_programa '{' list_sentencia '}' .  (1)
	programa : nombre_programa '{' list_sentencia '}' . '}'  (2)

	'}'  shift 140
	$end  reduce 1


state 74
	sentencia_print : PRINT '(' CADENA . ')'  (62)

	')'  shift 141
	.  error


state 75
	sentencia_print : PRINT '(' ')' .  (64)

	.  reduce 64


state 76
	sentencia_print : PRINT '(' expresion . ')'  (63)
	expresion : expresion . operador_expresion termino  (108)
	expresion : expresion . operador_expresion error  (111)

	'+'  shift 90
	'-'  shift 91
	')'  shift 142
	.  error

	operador_expresion  goto 113


state 77
	sentencia_return : RETURN '(' expresion . ')'  (31)
	expresion : expresion . operador_expresion termino  (108)
	expresion : expresion . operador_expresion error  (111)

	'+'  shift 90
	'-'  shift 91
	')'  shift 143
	.  error

	operador_expresion  goto 113


state 78
	identificador : ID '.' ID .  (139)

	.  reduce 139


state 79
	header_lambda : '(' tipo ID . ')'  (102)

	')'  shift 144
	.  error


state 80
	semantica : CR .  (29)

	.  reduce 29


state 81
	declaracion_funcion : header_funcion '(' parametros_formales . ')' '{' list_sentencia '}'  (8)
	parametros_formales : parametros_formales . ',' parametro_formal  (24)

	')'  shift 145
	','  shift 146
	.  error


state 82
	parametros_formales : parametro_formal .  (23)

	.  reduce 23


state 83
	parametro_formal : semantica . tipo ID  (26)
	parametro_formal : semantica . ID  (27)
	parametro_formal : semantica . tipo  (28)

	ID  shift 147
	ULONG  shift 14
	.  error

	tipo  goto 148


state 84
	list_vars : list_vars ID .  (41)

	.  reduce 41


state 85
	list_vars : list_vars ',' . ID  (40)

	ID  shift 149
	.  error


state 86
	punto_y_coma : error ';' .  (19)

	.  reduce 19


state 87
	list_vars_mix : list_vars_mix ',' identificador .  (37)

	.  reduce 37


state 88
	list_ctes : CTE .  (33)

	.  reduce 33


state 89
	list_ctes : list_ctes . ',' CTE  (34)
	list_ctes : list_ctes . CTE  (35)
	asignacion_multiple : list_vars_mix '=' list_ctes .  (101)

	CTE  shift 150
	','  shift 151
	error  reduce 101
	ELSE  reduce 101
	ENDIF  reduce 101
	';'  reduce 101


state 90
	operador_expresion : '+' .  (119)

	.  reduce 119


state 91
	operador_expresion : '-' .  (120)

	.  reduce 120


state 92
	operador_termino : '*' .  (121)

	.  reduce 121


state 93
	operador_termino : '/' .  (122)

	.  reduce 122


state 94
	expresion : error ';' .  (113)

	.  reduce 113


state 95
	expresion : error operador_expresion . termino  (110)
	expresion : error operador_expresion . error  (112)

	error  shift 152
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	.  error

	identificador  goto 60
	termino  goto 153
	factor  goto 64
	inicio_llamado  goto 65
	trunc  goto 66


state 96
	termino : error operador_termino . factor  (116)
	termino : error operador_termino . error  (118)

	error  shift 154
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	.  error

	identificador  goto 60
	factor  goto 155
	inicio_llamado  goto 65
	trunc  goto 66


state 97
	factor : '-' CTE .  (126)

	.  reduce 126


state 98
	trunc : TRUNC error . CTE ')'  (134)
	trunc : TRUNC error . CTE error  (135)

	CTE  shift 156
	.  error


state 99
	trunc : TRUNC '(' . CTE ')'  (132)
	trunc : TRUNC '(' . CTE error  (133)
	trunc : TRUNC '(' . '-' CTE ')'  (136)

	'-'  shift 157
	CTE  shift 158
	.  error


state 100
	condicion_if : '(' condicion . ')'  (73)
	condicion_if : '(' condicion .  (75)

	')'  shift 159
	PRINT  reduce 75
	RETURN  reduce 75
	ID  reduce 75
	'{'  reduce 75


state 101
	factor_simple : CTE .  (129)

	.  reduce 129


state 102
	comp : EQ .  (89)

	.  reduce 89


state 103
	comp : GEQ .  (90)

	.  reduce 90


state 104
	comp : LEQ .  (91)

	.  reduce 91


state 105
	comp : NEQ .  (92)

	.  reduce 92


state 106
	comp : '>' .  (93)

	.  reduce 93


state 107
	comp : '<' .  (94)

	.  reduce 94


state 108
	comp : '=' .  (95)
	comp : '=' . '<'  (96)
	comp : '=' . '>'  (97)

	'>'  shift 160
	'<'  shift 161
	error  reduce 95
	'-'  reduce 95
	CTE  reduce 95
	ID  reduce 95
	TRUNC  reduce 95


state 109
	comp : '!' . '='  (98)

	'='  shift 162
	.  error


state 110
	factor_simple : identificador .  (128)
	inicio_llamado : identificador . '('  (137)

	'('  shift 116
	PRINT  reduce 128
	RETURN  reduce 128
	DO  reduce 128
	ID  reduce 128
	'{'  reduce 128
	')'  reduce 128


state 111
	condicion : expresion comp . expresion  (87)

	error  shift 54
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	.  error

	expresion  goto 163
	identificador  goto 60
	termino  goto 63
	factor  goto 64
	inicio_llamado  goto 65
	trunc  goto 66


state 112
	condicion : expresion factor_simple .  (88)

	.  reduce 88


state 113
	expresion : expresion operador_expresion . termino  (108)
	expresion : expresion operador_expresion . error  (111)

	error  shift 164
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	.  error

	identificador  goto 60
	termino  goto 165
	factor  goto 64
	inicio_llamado  goto 65
	trunc  goto 66


state 114
	factor_simple : inicio_llamado . parametros_reales ')'  (130)

	error  shift 126
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	.  error

	expresion  goto 127
	identificador  goto 60
	parametros_reales  goto 166
	parametro_real  goto 129
	termino  goto 63
	factor  goto 64
	inicio_llamado  goto 65
	trunc  goto 66


state 115
	factor_simple : trunc .  (131)

	.  reduce 131


state 116
	inicio_llamado : identificador '(' .  (137)

	.  reduce 137


state 117
	sentencia_ejecutable_simple : sentencia_return .  (46)

	.  reduce 46


state 118
	sentencia_if : if condicion_if cuerpo_ejecutable . else cuerpo_ejecutable end_if  (60)
	sentencia_if : if condicion_if cuerpo_ejecutable . end_if  (61)
	end_if : .  (72)

	ELSE  shift 167
	ENDIF  shift 168
	error  reduce 72
	';'  reduce 72

	else  goto 169
	end_if  goto 170


state 119
	cuerpo_ejecutable : bloque_ejecutable .  (42)

	.  reduce 42


state 120
	cuerpo_ejecutable : sentencia_ejecutable_simple .  (43)

	.  reduce 43


state 121
	sentencia_ejecutable_simple : asignacion_simple .  (44)

	.  reduce 44


state 122
	sentencia_ejecutable_simple : asignacion_multiple .  (45)

	.  reduce 45


state 123
	sentencia_ejecutable_simple : sentencia_print .  (47)

	.  reduce 47


state 124
	condicion_if : condicion ')' .  (74)

	.  reduce 74


state 125
	termino : termino operador_termino . factor  (114)
	termino : termino operador_termino . error  (117)

	error  shift 171
	'-'  shift 55
	CTE  shift 56
	ID  shift 13
	TRUNC  shift 57
	.  error

	identificador  goto 60
	factor  goto 172
	inicio_llamado  goto 65
	trunc  goto 66


state 126
	parametros_reales : error .  (83)
	expresion : error . operador_expresion termino  (110)
	expresion : error . operador_expresion error  (112)
	expresion : error . ';'  (113)
	termino : error . operador_termino factor  (116)
	termino : error . operador_termino error  (118)

	'+'  shift 90
	'-'  shift 91
	'*'  shift 92
	'/'  shift 93
	';'  shift 94
	')'  reduce 83
	','  reduce 83

	operador_expresion  goto 95
	operador_termino  goto 96


state 127
	parametro_real : expresion . FLECHA ID  (84)
	parametro_real : expresion . FLECHA  (85)
	parametro_real : expresion . ID  (86)
	expresion : expresion . operador_expresion termino  (108)
	expresion : expresion . operador_expresion error  (111)

	'+'  shift 90
	'-'  shift 91
	ID  shift 173
	FLECHA  shift 174
	.  error

	operador_expresion  goto 113


state 128
	parametros_reales : parametros_reales . ',' parametro_real  (82)
	factor : inicio_llamado parametros_reales . ')'  (125)

	')'  shift 175
	','  shift 176
	.  error


state 129
	parametros_reales : parametro_real .  (81)

	.  reduce 81


state 130
	condicion_while : '(' condicion . ')'  (77)
	condicion_while : '(' condicion .  (79)

	')'  shift 177
	PRINT  reduce 79
	RETURN  reduce 79
	DO  reduce 79
	ID  reduce 79
	'{'  reduce 79


state 131
	do : DO .  (66)

	.  reduce 66

